--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.17.0",
+    "mammoth": "^1.9.0",
     "react": "^19.1.0",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^19.1.0",
