--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.17.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "file-saver": "^2.0.5",
+    "html-docx-ts": "^0.0.5",
     "http-proxy-middleware": "^3.0.5",
     "mammoth": "^1.9.0",
     "react": "^19.1.0",
@@ -22,6 +28,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/file-saver": "^2.0.7",
+    "@types/html-docx-js": "^0.3.4",
     "@types/node": "^22.15.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
